--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://ds3-t.coacyizgiyh4.us-east-1.rds.amazonaws.com/db_clean_house?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.username=clean_house
+spring.datasource.password=magiccode
 
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
