--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>cleanHouse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CleanTeste</name>
-	<description>Demo project for Spring Boot</description>
+	<name>CleanHouse</name>
+	<description>Back end para aplicacao do cleanhouse</description>
 
 	<properties>
 		<java.version>1.8</java.version>
