end point cliente e funcionario, entidades modeladas,mas tem um problema na req get de todos profissionais

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=clean_house
 spring.datasource.password=magiccode
 
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
