--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=magiccode
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+default-storage-engine=innodb
 spring.jpa.show.sql=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
