--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost/db_clean_house?createDatabaseIfNotE
 #spring.datasource.username=clean_house
 spring.datasource.username=root
 #spring.datasource.password=magiccode
-spring.datasource.password=
+spring.datasource.password=bcd127
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
