--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 default-storage-engine=innodb
 spring.jpa.show.sql=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+#jwt.secret=usersecret
