--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ default-storage-engine=innodb
 spring.jpa.show.sql=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
-#jwt.secret=usersecret
+spring.servlet.multipart.max-file-size=300MB
+spring.servlet.multipart.max-request-size=300MB
