--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ default-storage-engine=innodb
 spring.jpa.show.sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
+#spring.devtools.add-properties=false
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
