--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.database=MYSQL
 #spring.datasource.url=jdbc:mysql://ds3-t.coacyizgiyh4.us-east-1.rds.amazonaws.com/db_clean_house?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.url=jdbc:mysql://localhost/db_clean_house?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=bcd127
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
