--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <scope>test</scope>
         </dependency>
 
+
+		<dependency>
+			<groupId>com.mercadopago</groupId>
+			<artifactId>dx-java</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
